--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",,
-    "homepage": "https://lumire-ee.github.io/budget_book/"
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://lumire-ee.github.io/budget_book/",
   "eslintConfig": {
     "extends": [
       "react-app",
